@@ -100,6 +100,7 @@ export(smooth.time.series)
 export(sobal)
 export(sp.kde)
 export(sp.na.omit)
+export(spatial.select)
 export(spherical.sd)
 export(srr)
 export(stratified.random)
